[package]
name = "cpp_joinstr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
joinstr = {git = "https://github.com/pythcoiner/joinstr.git", rev = "028985b"}
cxx = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[build-dependencies]
cxx-build = "1.0.149"
