[package]
name = "cpp_joinstr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
doctest = false

[dependencies]
joinstr = {git = "https://github.com/pythcoiner/joinstr.git", rev = "88478b8"}
cxx = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
log = "0.4.27"
env_logger = "0.11.6"
dirs = "6.0.0"

[dev-dependencies]
electrsd = { git = "https://github.com/pythcoiner/electrsd.git", branch = "buffered_logs"}

[build-dependencies]
cxx-build = "1.0.149"
